unpackaged/main/default/objects/Case_Template__c/fields/AML_Approval__c.field-meta.xml
<CustomField>
    <fullName>AML_Approval__c</fullName>
    <label>AML Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TRUE</fullName>
            </value>
            <value>
                <fullName>FALSE</fullName>
            </value>
            <value>
                <fullName>EXCLUDED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>