unpackaged/main/default/objects/Case_Template__c/fields/Case_Template_Testing_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Template_Testing_Name__c</fullName>
    <label>Case Template Testing Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>