unpackaged/main/default/objects/Case_Template__c/fields/Change_Withholdings__c.field-meta.xml
<CustomField>
    <fullName>Change_Withholdings__c</fullName>
    <label>Change Withholdings</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TRUE</fullName>
            </value>
            <value>
                <fullName>FALSE</fullName>
            </value>
            <value>
                <fullName>EXCLUDED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>