unpackaged/main/default/objects/Case_Template__c/fields/Charity_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Charity_Sponsor__c</fullName>
    <label>Charity Sponsor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fidelity Charitable</fullName>
            </value>
            <value>
                <fullName>Schwab Charitable</fullName>
            </value>
            <value>
                <fullName>University Impact</fullName>
            </value>
            <value>
                <fullName>EXCLUDED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>