unpackaged/main/default/objects/Case_Template__c/fields/Check_in_Hand__c.field-meta.xml
<CustomField>
    <fullName>Check_in_Hand__c</fullName>
    <label>Check in Hand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TRUE</fullName>
            </value>
            <value>
                <fullName>FALSE</fullName>
            </value>
            <value>
                <fullName>EXCLUDED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>