unpackaged/main/default/objects/Case_Template__c/fields/Compliance_Needed__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Needed__c</fullName>
    <label>Compliance Needed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TRUE</fullName>
            </value>
            <value>
                <fullName>FALSE</fullName>
            </value>
            <value>
                <fullName>EXCLUDED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>