unpackaged/main/default/objects/Case_Template__c/fields/Custodian__c.field-meta.xml
<CustomField>
    <fullName>Custodian__c</fullName>
    <label>Custodian</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fidelity</fullName>
            </value>
            <value>
                <fullName>Schwab</fullName>
            </value>
            <value>
                <fullName>EXCLUDED</fullName>
            </value>
            <value>
                <fullName>American Funds F2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>