unpackaged/main/default/objects/Case_Template__c/fields/Description_of_Case_Template__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Case_Template__c</fullName>
    <label>Description of Case Template</label>
    <type>TextArea</type>
</CustomField>