unpackaged/main/default/objects/Case_Template__c/fields/Enough_Cash__c.field-meta.xml
<CustomField>
    <fullName>Enough_Cash__c</fullName>
    <label>Enough Cash?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TRUE</fullName>
            </value>
            <value>
                <fullName>FALSE</fullName>
            </value>
            <value>
                <fullName>EXCLUDED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>