unpackaged/main/default/objects/Case_Template__c/fields/Impacted__c.field-meta.xml
<CustomField>
    <fullName>Impacted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Impacted</label>
    <type>Checkbox</type>
</CustomField>