unpackaged/main/default/objects/Case_Template__c/fields/Live_SLOA_on_File__c.field-meta.xml
<CustomField>
    <fullName>Live_SLOA_on_File__c</fullName>
    <label>Live SLOA on File</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
            <value>
                <fullName>EXCLUDED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>