unpackaged/main/default/objects/Case_Template__c/fields/Management_Style__c.field-meta.xml
<CustomField>
    <fullName>Management_Style__c</fullName>
    <label>Management Style</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AltMS</fullName>
            </value>
            <value>
                <fullName>AMS</fullName>
            </value>
            <value>
                <fullName>AMS+</fullName>
            </value>
            <value>
                <fullName>BD Exclusion</fullName>
            </value>
            <value>
                <fullName>DMS</fullName>
            </value>
            <value>
                <fullName>EPS</fullName>
            </value>
            <value>
                <fullName>EXCLUDED</fullName>
            </value>
            <value>
                <fullName>OMS</fullName>
            </value>
            <value>
                <fullName>TMS</fullName>
            </value>
            <value>
                <fullName>Courtesy Account</fullName>
            </value>
            <value>
                <fullName>Outside Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>