unpackaged/main/default/objects/Case_Template__c/fields/Money_Movement_Direction__c.field-meta.xml
<CustomField>
    <fullName>Money_Movement_Direction__c</fullName>
    <label>Money Movement Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In</fullName>
            </value>
            <value>
                <fullName>Out</fullName>
            </value>
            <value>
                <fullName>EXCLUDED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>