unpackaged/main/default/objects/Case_Template__c/fields/Need_Non_DAO_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Need_Non_DAO_Account_Number__c</fullName>
    <label>Need Non-DAO Account Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TRUE</fullName>
            </value>
            <value>
                <fullName>FALSE</fullName>
            </value>
            <value>
                <fullName>EXCLUDED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>