unpackaged/main/default/objects/Case_Template__c/fields/No_SLOA_on_File__c.field-meta.xml
<CustomField>
    <fullName>No_SLOA_on_File__c</fullName>
    <label>No SLOA on File</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TRUE</fullName>
            </value>
            <value>
                <fullName>FALSE</fullName>
            </value>
            <value>
                <fullName>EXCLUDED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>