unpackaged/main/default/objects/Case_Template__c/fields/Old_ID__c.field-meta.xml
<CustomField>
    <fullName>Old_ID__c</fullName>
    <externalId>true</externalId>
    <label>Old ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>