unpackaged/main/default/objects/Case_Template__c/fields/Order_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Order_Tickets__c</fullName>
    <label>Order Tickets</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TRUE</fullName>
            </value>
            <value>
                <fullName>FALSE</fullName>
            </value>
            <value>
                <fullName>EXCLUDED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>