unpackaged/main/default/objects/Case_Template__c/fields/Primary_Owners_Match__c.field-meta.xml
<CustomField>
    <fullName>Primary_Owners_Match__c</fullName>
    <label>Primary Owners Match</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TRUE</fullName>
            </value>
            <value>
                <fullName>FALSE</fullName>
            </value>
            <value>
                <fullName>EXCLUDED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>