unpackaged/main/default/objects/Case_Template__c/fields/Signature_Type__c.field-meta.xml
<CustomField>
    <fullName>Signature_Type__c</fullName>
    <label>Signature Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wet Signature</fullName>
            </value>
            <value>
                <fullName>DocuSign</fullName>
            </value>
            <value>
                <fullName>EXCLUDED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>