unpackaged/main/default/objects/Case_Template__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Closure</fullName>
            </value>
            <value>
                <fullName>Additional Funding</fullName>
            </value>
            <value>
                <fullName>Change of Registration</fullName>
            </value>
            <value>
                <fullName>Excluded</fullName>
            </value>
            <value>
                <fullName>Third Party Money Movement</fullName>
            </value>
            <value>
                <fullName>Financial Planning</fullName>
            </value>
            <value>
                <fullName>Multi-Family Office</fullName>
            </value>
            <value>
                <fullName>ERISA</fullName>
            </value>
            <value>
                <fullName>Person Account Requested Changes</fullName>
            </value>
            <value>
                <fullName>Change Management Style</fullName>
            </value>
            <value>
                <fullName>Update Trade Instructions</fullName>
            </value>
            <value>
                <fullName>Purchase Alternative Investment</fullName>
            </value>
            <value>
                <fullName>Variable Annuity Additional Purchase</fullName>
            </value>
            <value>
                <fullName>DMS - Raise Cash</fullName>
            </value>
            <value>
                <fullName>DMS - Add/Remove Systematic Withdrawals</fullName>
            </value>
            <value>
                <fullName>DMS - Instructions for Future Deposit</fullName>
            </value>
            <value>
                <fullName>DMS - Other</fullName>
            </value>
            <value>
                <fullName>Update IMA</fullName>
            </value>
            <value>
                <fullName>Account Opening</fullName>
            </value>
            <value>
                <fullName>401k Rollover</fullName>
            </value>
            <value>
                <fullName>Client Passed Away</fullName>
            </value>
            <value>
                <fullName>Cancel Move Money Recurring</fullName>
            </value>
            <value>
                <fullName>Grant Donation</fullName>
            </value>
            <value>
                <fullName>Journal Between Accounts - On Demand</fullName>
            </value>
            <value>
                <fullName>Donation in Kind</fullName>
            </value>
            <value>
                <fullName>Move Money - One Time</fullName>
            </value>
            <value>
                <fullName>Move Money - Recurring</fullName>
            </value>
            <value>
                <fullName>Qualified Charitable Distribution</fullName>
            </value>
            <value>
                <fullName>Client Reimbursement</fullName>
            </value>
            <value>
                <fullName>Roth Conversion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>