unpackaged/main/default/objects/Case_Template__c/fields/Type_of_Template__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Template__c</fullName>
    <label>Type of Template</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Post</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>