unpackaged/main/default/objects/Case_Template__c/fields/X3_Way_Call_Task_Completed__c.field-meta.xml
<CustomField>
    <fullName>X3_Way_Call_Task_Completed__c</fullName>
    <label>3 Way Call Task Completed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TRUE</fullName>
            </value>
            <value>
                <fullName>FALSE</fullName>
            </value>
            <value>
                <fullName>EXCLUDED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>