unpackaged/main/default/objects/Case_Template__c/recordTypes/Advisor_Request.recordType-meta.xml
<RecordType>
    <fullName>Advisor_Request</fullName>
    <active>true</active>
    <label>Advisor Request</label>
</RecordType>