unpackaged/main/default/objects/Case_Template__c/recordTypes/Wizard_Request.recordType-meta.xml
<RecordType>
    <fullName>Wizard_Request</fullName>
    <active>true</active>
    <label>Wizard Request</label>
</RecordType>