unpackaged/main/default/objects/Case_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Case_Template_Testing_Name__c</columns>
    <columns>NAME</columns>
    <columns>Old_ID__c</columns>
    <columns>Signature_Type__c</columns>
    <columns>Need_DAO_Account_Number__c</columns>
    <columns>Management_Style__c</columns>
    <columns>No_SLOA_on_File__c</columns>
    <columns>Charity_Sponsor__c</columns>
    <columns>Type__c</columns>
    <columns>Enough_Cash__c</columns>
    <columns>Custodian__c</columns>
    <columns>X3_Way_Call__c</columns>
    <columns>Qualified__c</columns>
    <columns>Change_Withholdings__c</columns>
    <columns>Is_DAO_Eligible__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>