unpackaged/main/default/objects/Case_Template__c/listViews/Wizard_Templates.listView-meta.xml
<ListView>
    <fullName>Wizard_Templates</fullName>
    <columns>NAME</columns>
    <columns>Description_of_Case_Template__c</columns>
    <columns>Type__c</columns>
    <columns>AML_Approval__c</columns>
    <columns>SOF_Compliance__c</columns>
    <columns>SOF_Operations__c</columns>
    <columns>Needs_Principal_Review__c</columns>
    <columns>Check_in_Hand__c</columns>
    <columns>Need_DAO_Account_Number__c</columns>
    <columns>Need_Non_DAO_Account_Number__c</columns>
    <columns>Management_Style__c</columns>
    <columns>BD_Brokerage__c</columns>
    <columns>Reg_BI__c</columns>
    <columns>Address_Change_Proposed__c</columns>
    <columns>Case_Template_Testing_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case_Template__c.Wizard_Request</value>
    </filters>
    <label>Wizard Templates</label>
</ListView>